# SemiGlobalMatching

./: CMakeLists.txt  README.md  build.bat  build_arm.sh  build_x64.sh
example/: CMakeLists.txt  main.cpp
inc/: SemiGlobalMatching.h  debug_print.h  get_time.h  sgm_types.h
src/: CMakeLists.txt  SemiGlobalMatching.cpp  sgm_util.cpp
